# NucVerse3D

./: .gitignore  LICENSE  Makefile  README.md  anaconda-requirements.txt  config.py  dataset_preparation.py  dataset_splitter.py  generate_combined_data_set.py  generate_training_val_set.py  nuclei_prediction.py  pip-requirements.txt  prediction WS4.py  pyproject.toml  savetiff_combined_data_set.py  training.py  training_pipeline.py
keras_models/: attention_unet_3d.py  nisnet.py  resnet_unet_3d.py  unet_3d_dual_decoder.py  unet_3d_filters.py  unet_basic.py
postprocessing/: segmentation_postprocessing.py  smooth_prediction.py
preprocessing/: data_augmentation.py  image_preprocessing.py
src/: NDS_analysis.ipynb  compare_weights_h5.py  config.py  convert_weights.py  dataset_preparation.py  dataset_splitter.py  environment.yml  generate_combined_data_set.py  generate_combined_data_set_subfolder.py  group_datasets.py  nuclei_prediction.py  training_pipeline.py  training_pipeline2.py
src/keras_models/: attention_unet_3d.py  nisnet.py  resnet_unet_3d.py  unet_3d_dual_decoder.py  unet_3d_filters.py  unet_basic.py
src/postprocessing/: segmentation_postprocessing.py  smooth_prediction.py
src/preprocessing/: dataloader.py
src/stardist3d/: prediction_stardist3d.py  training_stardist3d.py
src/utils/: data.py  image.py  loss_functions.py  memory_profiler.py  parallel_interpolation.py  tensor.py
stardist3d/: prediction_stardist3d.py  training_stardist3d.py
utils/: CC2.py  Unet3D_filts.py  data.py  data_augmentation.py  data_utils.py  get_model_memory_usage.py  loss_functions.py  memory_profiler.py  models_3d.py  models_3d_attention.py  models_3d_attention_last.py  models_3d_attention_leacky_relu.py  models_3d_attention_tanh.py  nisnet.py  paralel_interpolation.py  parallel_interpolation.py  post_procesamiento.py  preprocessing.py  res_unet_3D.py  tensor.py  unet_3d_model_2_decoder.py  unet_basic.py  utils.py  utils_2.py
