[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucverse3d"
version = "0.0.1"
description = "NucVerse3D: generalizable 3D nuclear instance segmentation across heterogeneous microscopy modalities"
authors = [
  { name = "Vergara J. et al." },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = "~=3.10.0"

# Flat src/ layout (Noble 2009): top-level scripts live directly under src/,
# subdirectories (keras_models, utils, …) are sub-packages.
[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "config",
    "dataset",
    "dataset_preparation",
    "dataset_splitter",
    "features",
    "generate_combined_data_set",
    "generate_combined_data_set_subfolder",
    "nuclei_prediction",
    "plots",
    "savetiff_combined_data_set",
    "training_pipeline",
    "training_pipeline2",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["__pycache__*", "results*"]

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true
